@@ -2,12 +2,15 @@
 #-Xms1g
 #-Xmx1g
 
--XX:-UseConcMarkSweepGC
--XX:-UseCMSInitiatingOccupancyOnly
+-server
 -XX:+UseG1GC
--XX:G1ReservePercent=25
--XX:InitiatingHeapOccupancyPercent=30
+-XX:InitiatingHeapOccupancyPercent=70
+-XX:G1HeapRegionSize=16m
 -XX:+AlwaysPreTouch
+-XX:+DisableExplicitGC
+-XX:MaxGCPauseMillis=200
+-XX:ParallelGCThreads=20
+-XX:ConcGCThreads=5
 -Xlog:gc
 
 ## JVM temporary directory
